add :get by id swagger docs
